# SVC-Perception

./: README.md
Logitech_Calibration_data/: ost.txt  ost.yaml
camera_lidar_project/launch/: logi_camera_driver.launch  logitech_calibrated.launch  mono_camera_calibration.launch  perception.launch  perception_sim.launch
camera_lidar_project/src/: SyncedYoloData.cpp  SyncedYoloData.hpp
camera_lidar_project/yaml/: logi_camera_info.yaml
darknet_ros/darknet_ros/config/: SVC.yaml  ros.yaml
darknet_ros/darknet_ros/launch/: yolo_v3.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: SVC.cfg
homework3/: CMakeLists.txt  package.xml
homework3/cfg/: PointCloudExample.cfg
homework3/launch/: homework3.launch
homework3/rviz/: homework3.rviz
homework3/src/: Homework3.cpp  Homework3.hpp
homework3/tests/: CMakeLists.txt  homework3.test  homework3_test.cpp
